--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <div class="maindiv">
         <h1>Simple Interest Calculator</h1>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="range"  id="rate" min="1" max="20" value="10.25" onchange="updateRate()">  <br/>
+        Amount <input type="number"  id="principal">  <br>
+        Rate <input type="range"  id="rate" min="1" max="20" value="10.25" onchange="updateRate()">
         <span id="rate_val">
             10.25%
-        </span>
+        </span> <br>
         <select id="years">
             <option value="1">1</option>
             <option value="2">2</option>
