--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <span id="rate_val">
             10.25%
         </span> <br>
+        No of Years <input type="number"  id="years">
         <select id="years">
             <option value="1">1</option>
             <option value="2">2</option>
@@ -23,8 +24,8 @@
             <option value="8">8</option>
             <option value="9">9</option>
             <option value="10">10</option>
-        </select>
-        <button onclick="compute()">Compute Interest</button>
+        </select> <br>
+        <button onclick="compute()">Compute Interest</button> <br>
         <span id="result"></span><br>
         <footer>
             @Everyone Can Get Rich.
