--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <span id="rate_val">
             10.25%
         </span> <br>
-        No of Years 
-        <select id="years">
+        No of Years <select id="years">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
