--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button onclick="compute()">Compute Interest</button> <br>
         <span id="result"></span><br>
         <footer>
-            @Everyone Can Get Rich.
+            Ⓒ Everyone Can Get Rich
         </footer>    
     </div>
 </html>
